--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "apexcharts": "^3.32.1",
     "argon2": "^0.28.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
