--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "apexcharts": "^3.32.1",
+    "apexcharts": "^3.33.0",
     "argon2": "^0.28.2",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
@@ -24,6 +24,7 @@
     "pg": "^8.6.0",
     "postgresql": "^0.0.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
