--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postgresql": "^0.0.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
